非推奨のURL(String)をURIの変更した