@@ -3,6 +3,8 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
@@ -34,7 +36,8 @@ public class WeatherForecastApp {
         try {
             // Web APIを呼び出す
             // HttpURLConnectionを使ってGETリクエストを送信する
-            URL url = new URL(TARGET_URL);
+            URI uri = new URI(TARGET_URL); // URIを使用してURLを構築
+            URL url = uri.toURL(); // URIからURLを生成
             HttpURLConnection connection = (HttpURLConnection) url.openConnection();
             connection.setRequestMethod("GET");
 
@@ -79,6 +82,9 @@ public class WeatherForecastApp {
                 // レスポンスコードがOKでない場合のエラー処理
                 System.out.println("データの取得に失敗しました！");
             }
+        } catch (URISyntaxException e) {
+            // URI構文エラーを処理する
+            System.out.println("URIの構文が無効です: " + e.getMessage());
         } catch (IOException e) {
             // IO以外を処理する
             e.printStackTrace();
